rifatti i metodi del collaborationsDao e completati quelli che mancavano, aggiunte anche due annotazioni di validazione